frontend/test/should_pass/rewriteparametereval.grg
using rewriteparametereval;

pattern setX() modify (p:X) {
  modify {
    p -- p;             // compiles
    eval { p.x = "x"; } // does not compile
  }
}

rule foo {
  sa:setX();
  modify { p:X; sa(p); }
}
