frontend/test/should_fail/exectype_AssignConstToVar4.grg
using exectype;

rule r
{
	modify  {
		exec(x:foo=foo::Gnampf); // Gnampf is not a value of enum foo
	}
}